--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <title>Test</title>
 </head>
 <body>
-    <h1>You ar in Test.html</h1>
+    <h1>You are in Test.html</h1>
     <a href="index.html">Click here to go back.</a>
 </body>
 </html>
