--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#test">Test</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="game.html">Game</a>
+            </li>
 
 
           </ul>
