added contact form info alert

--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#test">Test</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="game.html">Game</a>
             </li>
 
@@ -64,26 +61,29 @@
 
       <!-- Home -->
       <div id="home" class="container-fluid">
-        <h1>Home</h1>
         <div class="alert alert-warning">
           <strong>Warning!</strong> page Under Construction
         </div>
+        <div class="alert alert-info">
+          <strong>Leave your message through Contact Form &#128540;</strong>
+        </div>
 
-            
-            <div class="alert alert-success">
-              <audio controls>
-                <source src="src/yt1s.com - 1 Hour Hokage Funeral Naruto OST Piano Version.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
-              </audio>
-              <strong>Enjoy the music till then</strong>
-            </div>
-          </div>
+
+        <div class="alert alert-success">
+          <audio controls>
+            <source src="src/yt1s.com - 1 Hour Hokage Funeral Naruto OST Piano Version.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+          <strong>Enjoy the music till then</strong>
+        </div>
+      </div>
 
 
       <!-- Contact -->
       <div id="contact" class="container-fluid">
         <div class="jumbotron">
           <h1 style="text-align: center;">Drop me a line</h1>
+          <br>
           <div class="container">
             <form action="https://formspree.io/f/xnqorpkb" method="POST">
               <div>
@@ -165,13 +165,7 @@
           </div>
         </div>
       </div>
-      <div id="test" class="container-fluid">
-        <h1>Test</h1>
-        <p>This is to check the alignment of all the contents </p>
-        <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and
-          look
-          at the navigation bar while scrolling!</p>
-      </div>
+
 
 
 
