contact form update

--- a/game.html
+++ b/game.html
@@ -69,7 +69,7 @@
     </div>
 
     <footer>
-        <a href="index.html">Click here to go back</a>
+        <a class="text-muted" href="index.html">Click here to go back</a>
     </footer>
 
     <script>
