--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                 <h1 style="text-align: center;">Drop me a line</h1>
                 <br>
                 <div class="container">
-                    <form action="https://formspree.io/f/xnqorpkb" method="POST">
+                    <form action="https://formspree.io/f/mknpagyg" method="POST">
                         <div>
                             <div class="form-group">
                                 <input type="text" placeholder="Enter your Name" name="name" class="form-control"
