--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                 <h1 style="text-align: center;">Drop me a line</h1>
                 <br>
                 <div class="container">
-                    <form action="https://formspree.io/f/mknpagyg" method="POST">
+                    <form action="https://formspree.io/f/mvovnglz" method="POST">
                         <div>
                             <div class="form-group">
                                 <input type="text" placeholder="Enter your Name" name="name" class="form-control"
@@ -77,7 +77,8 @@
                             </div>
                         </div>
                     </form>
-                    <!-- Ajax Script -->
+                    <!-- Place this script at the end of the body tag -->
+
                     <script>
                         window.addEventListener("DOMContentLoaded", function () {
 
