--- a/contact.html
+++ b/contact.html
@@ -132,12 +132,12 @@
 
 
                     <div style="text-align: center;">
-                        <a href="https://www.facebook.com/saurabh.kala.169/"><i class="fa fa-facebook-square"
+                        <a  href="https://www.facebook.com/saurabh.kala.169/"><i class="fa fa-facebook-square"
                                 aria-hidden="true"></i></a>
-                        <a href="https://instagram.com/saurabh111121"><i class="fa fa-instagram"
+                        <a class="text-muted" href="https://instagram.com/saurabh111121"><i class="fa fa-instagram"
                                 aria-hidden="true"></i></a>
-                        <a href="https://twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a href="https://github.com/saurabh111121"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a  href="https://twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a class="text-muted" href="https://github.com/saurabh111121"><i class="fa fa-github" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
