--- a/contact.html
+++ b/contact.html
@@ -134,10 +134,10 @@
                     <div style="text-align: center;">
                         <a  href="https://www.facebook.com/saurabh.kala.169/"><i class="fa fa-facebook-square"
                                 aria-hidden="true"></i></a>
-                        <a class="text-muted" href="https://instagram.com/saurabh111121"><i class="fa fa-instagram"
+                        <a style="color: red;" href="https://instagram.com/saurabh111121"><i class="fa fa-instagram"
                                 aria-hidden="true"></i></a>
                         <a  href="https://twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a class="text-muted" href="https://github.com/saurabh111121"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a style="color: black;" href="https://github.com/saurabh111121"><i class="fa fa-github" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
