--- a/game.html
+++ b/game.html
@@ -15,8 +15,30 @@
 
 </head>
 
-<body class="container">
+<body >
     <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+              aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+    
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="game.html">Game</a>
+                </li>
+    
+              </ul>
+            </div>
+          </nav>
         <h1>
             Tic Tac Toe <strong> GAME</strong>
         </h1>
@@ -24,7 +46,7 @@
     <br>
 
     <!-- body -->
-    <div>
+    <div class="container">
         <div>
             <div class="board">
                 <div class="row justify-content-center">
