--- a/b_index.html
+++ b/b_index.html
@@ -245,7 +245,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
-            <img src="assets/img/mosanto.jpg" class="img-fluid" alt="">
+            <img src="assets/img/usage_1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <h6><span style="font-weight: bold;">Usage: </span><br>
