--- a/index.html
+++ b/index.html
@@ -4,92 +4,342 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <meta name="description" content="Personal portfolio website showcasing projects, skills, and experience">
+  <meta name="keywords" content="portfolio, web development, projects, skills">
+  <meta name="author" content="Saurabh Kala">
+  
+  <title>Saurabh Kala - Portfolio</title>
 
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
+  <link rel="icon" href="assets/img/favicon.png">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="src/bootstrap/bootstrap-4.5.3-dist/css/bootstrap.min.css">
+  
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="src/index/index.css">
 
-  <!--  bootstrap -->
-  <link rel="stylesheet" href="src/bootstrap/bootstrap-4.5.3-dist/css/bootstrap.min.css">
-  <script src="src/bootstrap/bootstrap-4.5.3-dist/js/bootstrap.min.js"></script>
-
-
-  <!-- Font aweseome -->
+  <!-- Font Awesome -->
   <script src="https://use.fontawesome.com/10b1426743.js"></script>
-
 </head>
 
 <body>
+  <!-- Header -->
+  <header id="header" class="fixed-top">
+    <div class="container d-flex align-items-center justify-content-between">
+      <h1 class="logo"><a href="index.html">Saurabh<span>Kala</span></a></h1>
 
-  <body data-spy="scroll" data-target=".navbar" data-offset="50">
-
-    <!-- header -->
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="game.html">Game</a>
-            </li>
-
-          </ul>
-        </div>
+      <nav class="nav-menu d-none d-lg-block">
+        <ul>
+          <li class="active"><a href="#hero">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="game.html">Game</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
-    </header>
-    
-    <br>
 
+      <!-- Mobile Navigation Toggle Button -->
+      <button type="button" class="mobile-nav-toggle d-lg-none"><i class="fa fa-bars"></i></button>
+    </div>
+  </header>
 
-
-    <!-- body -->
-    <div>
-      <!-- Home -->
-      <div  class="container-fluid">
-        <div class="alert alert-warning">
-          <strong>Warning!</strong> page Under Construction
+  <!-- Hero Section -->
+  <section id="hero" class="d-flex align-items-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
+          <h1>Welcome to My Portfolio</h1>
+          <h2>Web Developer & Designer</h2>
+          <div class="d-flex">
+            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+            <a href="#portfolio" class="btn-projects scrollto">My Projects</a>
+          </div>
         </div>
-        <div class="alert alert-info">
-          <strong>Leave your message through Contact Form &#128540;</strong>
-        </div>
-
-
-        <div class="alert alert-success">
-          <audio controls>
-            <source src="src/yt1s.com - 1 Hour Hokage Funeral Naruto OST Piano Version.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-          </audio>
-          <strong>Enjoy the music till then</strong>
+        <div class="col-lg-6 order-1 order-lg-2 hero-img">
+          <img src="assets/img/hero-bg.jpg" class="img-fluid" alt="Hero Image">
         </div>
       </div>
-
-
-
-
-
-
-
     </div>
+  </section>
 
+  <main id="main">
+    <!-- About Section -->
+    <section id="about" class="about">
+      <div class="container">
+        <div class="section-title">
+          <h2>About</h2>
+          <h3>Learn More <span>About Me</span></h3>
+          <p>Passionate web developer focused on creating engaging, responsive, and user-friendly websites</p>
+        </div>
 
+        <div class="row">
+          <div class="col-lg-6">
+            <img src="assets/img/about.jpg" class="img-fluid" alt="About Image">
+          </div>
+          <div class="col-lg-6 pt-4 pt-lg-0 content">
+            <h3>Web Developer & Designer</h3>
+            <p class="font-italic">
+              I specialize in building modern, responsive websites with attention to detail and focus on user experience.
+            </p>
+            <p>
+              With a strong foundation in both frontend and backend technologies, I create web applications that are not only visually appealing but also performant and maintainable. My approach combines technical skills with creative problem-solving to deliver solutions that meet client needs.
+            </p>
+            <div class="row">
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="fa fa-check-circle"></i> <strong>Freelance:</strong> Available</li>
+                  <li><i class="fa fa-check-circle"></i> <strong>Website:</strong> saurabh111121.github.io</li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="fa fa-check-circle"></i> <strong>Location:</strong> India</li>
+                  <li><i class="fa fa-check-circle"></i> <strong>Email:</strong> contact@example.com</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <!-- Footer -->
+    <!-- Skills Section -->
+    <section id="skills" class="skills section-bg">
+      <div class="container">
+        <div class="section-title">
+          <h2>Skills</h2>
+          <h3>My <span>Technical Skills</span></h3>
+          <p>Here are my core technical skills and proficiency levels</p>
+        </div>
 
+        <div class="row skills-content">
+          <div class="col-lg-6">
+            <div class="progress">
+              <span class="skill">HTML <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
+            <div class="progress">
+              <span class="skill">CSS <i class="val">85%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
+            <div class="progress">
+              <span class="skill">JavaScript <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
 
-    <!-- Scripts -->
+          <div class="col-lg-6">
+            <div class="progress">
+              <span class="skill">Bootstrap <i class="val">85%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
-  </body>
+            <div class="progress">
+              <span class="skill">React <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Node.js <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="portfolio">
+      <div class="container">
+        <div class="section-title">
+          <h2>Portfolio</h2>
+          <h3>Check My <span>Portfolio</span></h3>
+          <p>A showcase of my recent projects and work</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">App</li>
+              <li data-filter=".filter-design">Design</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row portfolio-container">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web Project 1</h4>
+                <p>Web</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>App Project 1</h4>
+                <p>App</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web Project 2</h4>
+                <p>Web</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Design Project 1</h4>
+                <p>Design</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web Project 3</h4>
+                <p>Web</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>App Project 2</h4>
+                <p>App</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Featured Game Section -->
+    <section id="featured-game" class="featured-game">
+      <div class="container">
+        <div class="section-title">
+          <h2>Game</h2>
+          <h3>Try My <span>Tic Tac Toe Game</span></h3>
+          <p>Challenge yourself with a classic game of Tic Tac Toe against the computer</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <p>Test your strategic skills in a game of Tic Tac Toe against an AI opponent.</p>
+            <a href="game.html" class="btn btn-primary">Play Now</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section (Preview) -->
+    <section id="contact-preview" class="contact-preview section-bg">
+      <div class="container">
+        <div class="section-title">
+          <h2>Contact</h2>
+          <h3>Get In <span>Touch</span></h3>
+          <p>Feel free to reach out to me for any inquiries or collaboration opportunities</p>
+        </div>
+
+        <div class="row text-center">
+          <div class="col-md-6">
+            <div class="info-box">
+              <i class="fa fa-envelope"></i>
+              <h3>Email Me</h3>
+              <p>contact@example.com</p>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="info-box">
+              <i class="fa fa-globe"></i>
+              <h3>Social Profiles</h3>
+              <div class="social-links mt-3">
+                <a href="https://www.facebook.com/saurabh.kala.169/"><i class="fa fa-facebook"></i></a>
+                <a href="https://instagram.com/saurabh111121"><i class="fa fa-instagram"></i></a>
+                <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
+                <a href="https://github.com/saurabh111121"><i class="fa fa-github"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row text-center mt-4">
+          <div class="col-lg-12">
+            <a href="contact.html" class="btn btn-primary">Contact Me</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer id="footer">
+    <div class="container py-4">
+      <div class="copyright">
+        &copy; <strong><span>Saurabh Kala</span></strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        Portfolio Website
+      </div>
+    </div>
+  </footer>
+
+  <a href="#" class="back-to-top"><i class="fa fa-arrow-up"></i></a>
+
+  <!-- jQuery first, then Bootstrap JS -->
+  <script src="src/jquery/compressed production jQuery 3.5.1/jquery-3.5.1.min.js"></script>
+  <script src="src/bootstrap/bootstrap-4.5.3-dist/js/bootstrap.min.js"></script>
+  <script src="src/popper.js/popper.min.js"></script>
+
+  <!-- Main JS -->
+  <script src="assets/js/main.js"></script>
+
+  <script>
+    // Initialize skill bar animations
+    $(document).ready(function() {
+      $('.progress .progress-bar').each(function() {
+        $(this).css("width", $(this).attr("aria-valuenow") + '%');
+      });
+    });
+  </script>
+
+</body>
 
 </html>
