--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="fa fa-check-circle"></i> <strong>Location:</strong> India</li>
-                  <li><i class="fa fa-check-circle"></i> <strong>Email:</strong> contact@example.com</li>
+                  <li><i class="fa fa-check-circle"></i> <strong>Email:</strong> 111121saurabh@gmail.com</li>
                 </ul>
               </div>
             </div>
@@ -149,16 +149,16 @@
             </div>
 
             <div class="progress">
-              <span class="skill">React <i class="val">75%</i></span>
+              <span class="skill">React / Next<i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Node.js <i class="val">70%</i></span>
+              <span class="skill">JAVA<i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
           </div>
@@ -282,7 +282,7 @@
             <div class="info-box">
               <i class="fa fa-envelope"></i>
               <h3>Email Me</h3>
-              <p>contact@example.com</p>
+              <p>111121saurabh@gmail.com</p>
             </div>
           </div>
 
