--- a/b_index.html
+++ b/b_index.html
@@ -38,7 +38,7 @@
   <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
     <div class="container d-flex">
       <div class="contact-info mr-auto">
-        <i class="icofont-envelope"></i> <a href="mailto:contact@example.com">contact@example.com</a>
+        <i class="icofont-envelope"></i> <a href="mailto:111121saurabh@gmail.com">111121saurabh@gmail.com</a>
         <i class="icofont-phone"></i> +1 5589 55488 55
       </div>
       <div class="social-links">
@@ -636,7 +636,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email Us</h3>
-              <p>contact@example.com</p>
+              <p>111121saurabh@gmail.com</p>
             </div>
           </div>
 
