--- a/b_index.html
+++ b/b_index.html
@@ -62,13 +62,13 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#usage">Usage</a></li>
-          <!-- <li><a href="#portfolio">Similar Product's</a></li> -->
-          <li><a href="#faq">FAQ</a></li>
-          <li><a href="#review">Reviews</a></li>
-          <li><a href="#contact">Contact</a></li>
-
+          <li><a href="index.html#about">About</a></li>
+          <li><a href="index.html#skills">Skills</a></li>
+          <li><a href="index.html#portfolio">Portfolio</a></li>
+          <li><a href="game.html">Game</a></li>
+          <li><a href="wallpapers.html">Wallpapers</a></li>
+          <li><a href="books.html">Books</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
