--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,8 @@
           <li><a href="index.html#skills">Skills</a></li>
           <li><a href="index.html#portfolio">Portfolio</a></li>
           <li><a href="game.html">Game</a></li>
+          <li><a href="wallpapers.html">Wallpapers</a></li>
+          <li><a href="books.html">Books</a></li>
           <li class="active"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -49,6 +51,8 @@
           <li><a href="index.html#skills">Skills</a></li>
           <li><a href="index.html#portfolio">Portfolio</a></li>
           <li><a href="game.html">Game</a></li>
+          <li><a href="wallpapers.html">Wallpapers</a></li>
+          <li><a href="books.html">Books</a></li>
           <li class="active"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
